--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Logo-in-the-browser</title>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112400722-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      
+      gtag('config', 'UA-112400722-1');
+    </script>
+
     <link rel="stylesheet" type="text/css" href="ymacs/test/dl/new-theme/default.css" />
     <link rel="stylesheet" type="text/css" href="ymacs/src/css/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="gambit-in-emacs-in-the-browser.css" />
