Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Logo-in-the-browser</title>
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112400722-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
-      gtag('config', 'UA-112400722-1');
-    </script>
-
     <link rel="stylesheet" type="text/css" href="ymacs/test/dl/new-theme/default.css" />
     <link rel="stylesheet" type="text/css" href="ymacs/src/css/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="gambit-in-emacs-in-the-browser.css" />
@@ -53,6 +42,17 @@
     <script src="gsi.js"></script>
 
     <script>setupEmacs();</script>
+
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-112400722-1', 'imrehorvath.github.io');
+    ga('send', 'pageview');
+    </script> 
+
 
   </body>
 </html>
