--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="robots" content="max-snippet:-1">
     <title>Logo-in-the-browser</title>
     <link rel="stylesheet" type="text/css" href="ymacs/test/dl/new-theme/default.css" />
     <link rel="stylesheet" type="text/css" href="ymacs/src/css/ymacs.css" />
